--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="vendors/ti-icons/css/themify-icons.css">
   <link rel="stylesheet" type="text/css" href="assets/js/select.dataTables.min.css">
   <link rel="stylesheet" href="assets/css/vertical-layout-light/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
   <link rel="shortcut icon" href="assets/images/favicon.png" />
@@ -654,7 +655,7 @@
                         <div class="form-group row">
                           <label class="col-sm-3 col-form-label">Gender</label>
                           <div class="col-sm-9">
-                            <select name="gender" aria-label="Default select example" class="form-control">
+                            <select id="cus_gender" name="gender" aria-label="Default select example" class="form-control">
                               <option selected>Select Gender</option>
                               <option value="MALE">MALE</option>
                               <option value="FEMALE">FEMALE</option>
@@ -676,7 +677,7 @@
                         <div class="form-group row">
                           <label class="col-sm-3 col-form-label">Level</label>
                           <div class="col-sm-9">
-                            <select name="level" aria-label="Default select example" class="form-control">
+                            <select id="cus_level" name="level" aria-label="Default select example" class="form-control">
                               <option selected>Select Level</option>
                               <option value="GOLD">GOLD</option>
                               <option value="SILVER">SILVER</option>
