--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                         <div class="form-group row">
                           <label class="col-sm-3 col-form-label">Emp_Name</label>
                           <div class="col-sm-9">
-                            <input id="empName" name="name" type="text" class="form-control" />
+                            <input id="emp_name" name="name" type="text" class="form-control" />
                           </div>
                         </div>
                       </div>
@@ -585,39 +585,18 @@
                           <table class="table table-bordered">
                             <thead>
                             <tr>
-                              <th>
-                                Picture
-                              </th>
-                              <th>
-                                Name/Email
-                              </th>
-                              <th>
-                                Gender
-                              </th>
-                              <th>
-                                Status
-                              </th>
-                              <th>
-                                Designation
-                              </th>
-                              <th>
-                                Role
-                              </th>
-                              <th>
-                                Date of Birth
-                              </th>
-                              <th>
-                                Branch
-                              </th>
-                              <th>
-                                Inform in case of emergency
-                              </th>
-                              <th>
-                                Emergency Contact
-                              </th>
-                              <th>
-                                Button
-                              </th>
+                              <th>Picture</th>
+                              <th>Name</th>
+                              <th>Email</th>
+                              <th>Gender</th>
+                              <th>Status</th>
+                              <th>Designation</th>
+                              <th>Role</th>
+                              <th>Date of Birth</th>
+                              <th>Branch</th>
+                              <th>Inform in case of emergency</th>
+                              <th>Emergency Contact</th>
+                              <th>Button</th>
                             </tr>
                             </thead>
                             <tbody id="employee-tbl"></tbody>
@@ -843,7 +822,7 @@
                         <div class="form-group row">
                           <label class="col-sm-3 col-form-label">Category </label>
                           <div class="col-sm-9">
-                            <select class="form-control">
+                            <select id="category" name="category" class="form-control">
                               <option selected>Select Category </option>
                               <option value="INTERNATIONAL">INTERNATIONAL </option>
                               <option value="LOCAL">LOCAL</option>
@@ -951,27 +930,13 @@
                           <table class="table table-bordered">
                             <thead>
                             <tr>
-                              <th>
-                                Name
-                              </th>
-                              <th>
-                                Category
-                              </th>
-                              <th>
-                                Address
-                              </th>
-                              <th>
-                                Contact
-                              </th>
-                              <th>
-                                Email
-                              </th>
-                              <th>
-                                Date of Birth
-                              </th>
-                              <th>
-                                Button
-                              </th>
+                              <th>Name</th>
+                              <th>Category</th>
+                              <th>Address</th>
+                              <th>Contact No </th>
+                              <th>Contact No</th>
+                              <th>Email</th>
+                              <th>Delete</th>
                             </tr>
                             </thead>
                             <tbody id="supplier-tbl"></tbody>
@@ -1077,24 +1042,12 @@
                           <table class="table table-bordered">
                             <thead>
                             <tr>
-                              <th>
-                                Id/Name
-                              </th>
-                              <th>
-                                Picture
-                              </th>
-                              <th>
-                                Category
-                              </th>
-                              <th>
-                                Gender
-                              </th>
-                              <th>
-                                Occasion
-                              </th>
-                              <th>
-                                Button
-                              </th>
+                              <th>Id/Name</th>
+                              <th>Picture</th>
+                              <th>Category</th>
+                              <th>Gender</th>
+                              <th>Occasion</th>
+                              <th>Button</th>
                             </tr>
                             </thead>
                             <tbody id="inventory-tbl"></tbody>
@@ -1201,33 +1154,15 @@
                           <table class="table table-bordered">
                             <thead>
                             <tr>
-                              <th>
-                                Item Id
-                              </th>
-                              <th>
-                                Size
-                              </th>
-                              <th>
-                                Qty
-                              </th>
-                              <th>
-                                Profit Margin
-                              </th>
-                              <th>
-                                Unit Price-Sale
-                              </th>
-                              <th>
-                                Unit Price-Buy
-                              </th>
-                              <th>
-                                Expected Profit
-                              </th>
-                              <th>
-                                Status
-                              </th>
-                              <th>
-                                Button
-                              </th>
+                              <th>Item Id</th>
+                              <th>Size</th>
+                              <th>Qty</th>
+                              <th>Profit Margin</th>
+                              <th>Unit Price-Sale</th>
+                              <th>Unit Price-Buy</th>
+                              <th>Expected Profit</th>
+                              <th>Status</th>
+                              <th>Button</th>
                             </tr>
                             </thead>
                             <tbody id="size-tbl"></tbody>
@@ -1329,24 +1264,12 @@
                           <table class="table table-bordered">
                             <thead>
                             <tr>
-                              <th>
-                                Name
-                              </th>
-                              <th>
-                                Category
-                              </th>
-                              <th>
-                                Address
-                              </th>
-                              <th>
-                                Contact
-                              </th>
-                              <th>
-                                Email
-                              </th>
-                              <th>
-                                Button
-                              </th>
+                              <th>Name</th>
+                              <th>Category</th>
+                              <th>Address</th>
+                              <th>Contact</th>
+                              <th>Email</th>
+                              <th>Button</th>
                             </tr>
                             </thead>
                             <tbody id="sale-tbl"></tbody>
