--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                         <div class="form-group row">
                           <label class="col-sm-3 col-form-label">Gender</label>
                           <div class="col-sm-9">
-                            <select name="gender" class="form-control">
+                            <select id="gender" name="gender" class="form-control">
                               <option selected>Select Gender</option>
                               <option value="MALE">MALE</option>
                               <option value="FEMALE">FEMALE</option>
@@ -412,7 +412,7 @@
                         <div class="form-group row">
                           <label class="col-sm-3 col-form-label">Status </label>
                           <div class="col-sm-9">
-                            <select name="status" class="form-control">
+                            <select id="staus" name="status" class="form-control">
                               <option selected>Status</option>
                               <option value="single">Single</option>
                               <option value="married">Married</option>
@@ -434,7 +434,7 @@
                         <div class="form-group row">
                           <label class="col-sm-3 col-form-label">Select Role</label>
                           <div class="col-sm-9">
-                            <select name="role" class="form-control">
+                            <select id="role" name="role" class="form-control">
                               <option selected>Select Role</option>
                               <option value="ADMIN">ADMIN</option>
                               <option value="USER">USER</option>
@@ -596,7 +596,7 @@
                               <th>Branch</th>
                               <th>Inform in case of emergency</th>
                               <th>Emergency Contact</th>
-                              <th>Button</th>
+                              <th>Delete</th>
                             </tr>
                             </thead>
                             <tbody id="employee-tbl"></tbody>
